fixed movie slider overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -718,7 +718,7 @@ header {
 
 .movie-slider {
     position: relative;
-    overflow: hidden;
+    overflow: visible;
     height: 100vh;
     width: 100vw;
 }
